# t2s-cli

./: .gitignore  CLAUDE.md  Database.md  README.md  pyproject.toml  windows_debug.md
.github/: README.md
.github/workflows/: build-and-publish.yml  ci.yml  release.yml
scripts/: migrate_chinook_to_mongo.py
t2s/: __init__.py  cli.py
t2s/core/: engine.py
t2s/database/: db_manager.py  mongodb_manager.py
t2s/models/: external_api_manager.py  model_manager.py
t2s/utils/: mql_validator.py
t2s_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py
