[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t2s-cli"
version = "0.1.0"
description = "Terminal-based Text-to-SQL converter with AI model integration"
authors = [
    {email = "lakshmanturlapati@gmail.com"},
    {name = "Lakshman Turlapati"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sql", "text-to-sql", "ai", "database", "cli", "terminal"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.20.0",
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "questionary>=2.0.0",
    "art>=6.0",
    "tabulate>=0.9.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqlparse>=0.4.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pillow>=9.0.0",  # Required for multimodal models like SmolVLM
]

[project.optional-dependencies]
gemma = [
    "sentencepiece>=0.1.99",  # Required for Gemma tokenizers
]
all = [
    "sentencepiece>=0.1.99",
]

[project.scripts]
t2s = "t2s.cli:main"

[project.urls]
Homepage = "https://github.com/lakshmanturlapati/t2s-cli"
Repository = "https://github.com/lakshmanturlapati/t2s-cli"
Documentation = "https://github.com/lakshmanturlapati/t2s-cli#readme"
Issues = "https://github.com/lakshmanturlapati/t2s-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["t2s*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 